--- a/src/scss/_fs-onboarding.scss
+++ b/src/scss/_fs-onboarding.scss
@@ -30,14 +30,17 @@
   }
 
   .fs-dialogue-outer {
-       margin-block-start: calc(var(--fs-logo-size-sm) * .5);
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: calc(var(--fs-logo-size-md) * 0.25 + var(--fs-spacing-sm)) minmax(0, 1fr);
+
+    margin-block-start: calc(var(--fs-logo-size-sm) * 1);
+    @media (min-width: #{$screen-md}) {
+      grid-template-columns: calc(var(--fs-logo-size-md) * 0.5) minmax(0, 1fr);
+      grid-template-rows: 1fr;
+    }     
   }
-  .fs-dialogue-inner {
-      grid-template-columns: 1fr;
-      @media (min-width: #{$screen-md}) {
-        grid-template-columns: 1fr;
-      }    
-  }
+
 
   header {
     align-self: start;    
@@ -55,27 +58,10 @@
     }
   }
 
-  .fs-dialogue-inner {
-    @media  (min-width: #{$screen-md}) {
-      padding-block-start: 7.5vh;
-      padding-inline-start: unset;
-    }
-  }
+
 
   #onboarding-actions {
     flex: 1;
-  }
-
-  #onboarding-animationControls {
-    padding-block: var(--fs-spacing-xl);
-    align-self: end;
-    justify-self: start;
-    .fs-btn {
-      display: unset;
-    }
-    .fs-btn:not([hidden]) {
-      display: flex;
-    }
   }
 }
 
@@ -83,63 +69,87 @@
   #onboarding-welcome {
     display: inline-block;
     color: var(--fs-color-brand-primary);
-    font-size: var(--fs-size-lg);
+    font-size: var(--fs-size-md);
     font-weight: var(--fs-weight-bold);
     // margin-bottom: var(--fs-spacing-md);
     background: var(--fs-color-core-200);
     border-radius: var(--fs-spacing-xl);
-    margin-inline: calc(var(--fs-spacing-sm) * -1);
+    margin-block-start: var(--fs-spacing-sm);
     padding-inline: var(--fs-spacing-sm);
     padding-block: var(--fs-spacing-2xs);
   }
-  #onboarding-researchPrompt {
-    .fs-dialogue-title {
-      color: var(--fs-color-text-primary);
-      margin-block-start: var(--fs-spacing-lg);
+
+  .fs-dialogue-inner {
+    display: flex;
+    flex-direction: column;
+    gap: var(--spacing-md);
+
+      // grid-template-columns: 1fr;
+      // @media (min-width: #{$screen-md}) {
+      //   grid-template-columns: 1fr;
+      // }    
+
+    @media  (min-width: #{$screen-md}) {
+      padding-block-start: 7.5vh;
+      padding-inline-start: unset;
+    }
+    &::after {
+      display: none;
+    }
+  }
+
+  .fs-dialogue-title {
+    color: var(--fs-color-text-primary);
+    font-size: var(--fs-size-xl);
+    margin-block-start: var(--fs-spacing-md);
+  }
+  .fs-dialogue-text {
+    margin-block-start: var(--fs-spacing-sm);
+    margin-inline-start: unset;
+    margin-inline-end: unset;
+    padding-block: var(--fs-spacing-lg);
+    padding-inline-start: var(--fs-spacing-xl);
+    padding-inline-end: var(--fs-spacing-md);
+    border-radius: var(--fs-radius-lg);
+    background: var(--fs-color-white);
+
+    @media  (min-width: #{$screen-md}) {
+      padding-inline-start: 3.5vw;
+      padding-inline-end: 1.5vw;
+      margin-inline-end: var(--fs-spacing-lg);
     }
 
-    .fs-dialogue-text {
-      margin-block-start: var(--fs-spacing-md);
-      margin-inline-start: unset;
-      margin-inline-end: unset;
-      padding-block: var(--fs-spacing-lg);
-      padding-inline-start: var(--fs-spacing-xl);
-      padding-inline-end: var(--fs-spacing-md);
-      border-radius: var(--fs-radius-lg);
-      background: var(--fs-color-white);
-
-      @media  (min-width: #{$screen-md}) {
-        padding-inline-start: 3.5vw;
-        padding-inline-end: 1.5vw;
-        margin-inline-end: var(--fs-spacing-lg);
+    li {
+      list-style: numeric;
+      font-size: var(--fs-size-md);
+      font-weight: var(--fs-weight-light);
+      color: var(--fs-color-text-primary);
+      @media  (min-width: #{$screen-sm}) {
+        font-size: var(--fs-size-lg);
       }
-
-      li {
-        list-style: numeric;
-        font-size: var(--fs-size-md);
+      &::marker {
+        font-size: var(--fs-size-sm);
         font-weight: var(--fs-weight-light);
-        color: var(--fs-color-text-primary);
-        @media  (min-width: #{$screen-sm}) {
-          font-size: var(--fs-size-lg);
-        }
-        &::marker {
-          font-size: var(--fs-size-sm);
-          font-weight: var(--fs-weight-light);
-          line-height: calc(var(--fs-size-lg) * var(--fs-leading-lg));
-          color: var(--fs-color-brand-primary);
-        }
+        line-height: calc(var(--fs-size-lg) * var(--fs-leading-lg));
+        color: var(--fs-color-brand-primary);
       }
     }
   }
+
   .onboarding-actions {}
+
   #onboarding-help {
     display: flex;
     flex-direction: row;
     gap: var(--fs-spacing-sm);
     align-items: center;
 
-    margin-block-start: 5vh;
-    padding-block: var(--spacing-md);
+    // margin-block-start: 5vh;
+    // padding-block: var(--spacing-md);
+    @media  (min-width: #{$screen-sm}) {
+      margin-block-start: 5vh;
+      padding-block: var(--spacing-md);
+    }
 
     h2 {
       font-size: var(--size-md);
@@ -147,8 +157,26 @@
       margin-bottom: 0;
     }
   }
+
   #onboarding-animationControls {
+    align-self: end;
+    justify-self: start;
+
+    padding-block: var(--fs-spacing-lg);
     padding-inline-start: 5vw;
+
+    @media  (min-width: #{$screen-sm}) {
+      padding-inline-start: calc(5vw + var(--fs-spacing-xl));
+      padding-block: var(--fs-spacing-xl);
+    }
+
+    .fs-btn {
+      display: unset;
+    }
+    .fs-btn:not([hidden]) {
+      display: flex;
+    }
+
     .fs-btn {
       background: var(--fs-color-core-300);
       &:hover {
@@ -156,4 +184,5 @@
       }
     }
   }
+
 }
